# hoppy

./: .doignore  .gitignore  DEPLOY.md  DIGITALOCEAN_SETUP.md  ENV_VARIABLES.md  QUICK_DEPLOY.md  README.md  SETUP.md  app.yaml  combined_output.txt  fast_chunked_transcribe.py  fe_fast.py  fefast2.py  fefast3.py  fefast4.py  fejim.py  import csv.txt  install_speaker_id.bat  install_youtube_support.bat  package.json  requirements.txt  video-cheat.py  youtube.py
.do/: app.yaml
api/: Dockerfile  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_migration.py
api/app/: main.py
api/app/api/v1/: auth.py  calls.py  metrics.py  partners.py  router.py  websocket.py
api/app/core/: config.py  database.py  dependencies.py  security.py
api/app/models/: __init__.py  account.py  call.py  call_metrics_hourly.py  partner.py  summary.py  transcript.py  user.py  webhook_event.py
api/app/schemas/: __init__.py  auth.py  call.py  metrics.py  partner.py
other/: CLAUDE.md  fe-abdullah.txt
prompts/: aca-bill.py  aca-enrollment-original.py  aca-enrollment.py  aca-enrollment2.py  aca-enrollment4.py  aca-full.py  aca-home.py  aca-new.py  aca-pickup.py  aca-quality.py  aca-ritam.py  aca.py  aca2.py  aca_renewal.py  aca_score.py  aca_wav.py  acaappl.py  acabill.py  acacpa.py  acadata.py  acamain.py  acanew.py  acasale.py  acatest.py  agent-to-agent.py  agent.py  ai.py  alex.py  answer.py  app.py  auto.py  bank.py  billable.py  brian.py  ccvalidator.py  check.py  checkfe.py  chris.py  combine.py  daddy.py  (+32 more)
scripts/: integrate_fefast4.py  seed.py
(+32 files in other folders)
