[tool.poetry]
name = "hopwhistle-api"
version = "0.1.0"
description = "Hopwhistle Real-Time Lead Results Dashboard API"
authors = ["Hopwhistle Team"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

